--- a/README
+++ b/README
@@ -1,2 +1,15 @@
-This repo is just a place to screw around.
-No serious project going on here, folks.
+CocosRPG
+========
+
+About
+-----
+This repo is for my expirements with tile engines in Cocos2D
+The goal is to design a decent codebase that could be used to make an RPG.
+
+Run
+---
+python rpg.py
+
+License
+-------
+GPL v3
