An exception will now be thrown when adding an actor with a duplicate name to the map scene.

--- a/TODO
+++ b/TODO
@@ -1,23 +1,15 @@
-* Add common loading interface for actors loaded from xml or from sqlite
-    database
+* Add cinematic scripting
+    - Probably really difficult
+    - Dialog system
+    - Character movements, etc.
+* Work on battle engine
+    - Vague as hell
+* Document more code
+    - Ongoing process. The main classes are decently documented.
+* Add HUD and other needed UI elements
+    - cocos built in menu class won't cut it
 * Fix memory leaks from map scenes
     - When a new map scene is loaded it appears that there are still some
       dangling references to old scenes. These need to be tracked down and
       removed.
     - THIS IS A BUG IN COCOS2D - BUG REPORT SUBMITTED
-* Add game loading/saving with SQLite database
-    - Changes to db schema (add/remove tables) are updated automatically in
-      the db but insertions and deletions only affect the db in memory, not
-      until commit() is called will the changes saved. This makes sqlite
-      perfect for game saves.
-    - Construct database schema
-* Document more code
-    - Ongoing process. The main classes are decently documented.
-* Add dialog system
-    - Do some research
-* Add HUD and other needed UI elements
-    - cocos built in menu class won't cut it
-* Add cinematic scripting
-    - Probably really difficult
-* Work on battle engine
-    - Vague as hell
